--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 </div>             
                 <input type="submit" value="Ingresar" class="btn btn-success btn-block">          
             </form>
+        <div id="link" class="at-2">
+            <a href="./registro.html">Ir a registro</a>
     </div>
 </body>
 </html>
